# CeloBuild-

./: .gitignore  BACKEND_DEPLOY_CHECK.md  CAST_GENERATION_PLAN.md  DEPLOY_NOW.md  FARCASTER_READY_IMPLEMENTATION.md  MILESTONES.md  PRODUCTION_CHECKLIST.md  RAILWAY.md  README.md  STATUS.md  TRENDS_ANALYSIS.md  VERCEL.md  VERCEL_BACKEND_VERIFICATION.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOY_FIX.md  VERCEL_ERROR_DIAGNOSIS.md  VERCEL_SETUP.md  VERIFICAR_PRECIO_0.1_CELO.md  VISION.md  curl_output.json  package.json  pnpm-lock.yaml
apps/agents/: .dockerignore  .env.backup-20251208  .env.bak  .nixpacksignore  .railwayignore  .vercelignore  Dockerfile  ELIGIBILITY_AI_IMPROVEMENTS.md  PRUEBA_VERCEL.md  README.md  TEST_CAST_ENDPOINTS.md  TEST_VERCEL.md  TREND_WATCHER_CHECKLIST.md  TREND_WATCHER_SPEC.md  VERCEL_CONFIG.md  VERCEL_CRON_SETUP.md  VERCEL_FIX.md  VERCEL_FIX_COMPLETE.md  VERCEL_INTERNAL_ERROR_FIX.md  VERCEL_SETTINGS_FIX.md  VERIFICACION_FINAL.md  check_fid_info.py  env.sample  get_fid_from_mnemonic.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  test_agent.py  test_cast_endpoints.py  test_eligibility.py  test_minipay.py  test_vercel_endpoints.sh  vercel.json  verify_fid.py  verify_fid_vercel.sh
apps/agents/MD/: ARCHITECTURE.md  CREAR_CUENTA_FARCASTER.md  ELIGIBILITY_CHECKLIST.md  ELIGIBILITY_SPEC.md  ELIGIBILITY_VERIFICATION.md  SIGNERS_EXPLANATION.md  TROUBLESHOOTING.md
apps/agents/api/: index.py
apps/agents/scripts/: init_campaign.py
apps/agents/src/: __init__.py  check_balance.py  check_balance_simple.py  config.py  main.py  (+1 more)
(+130 files in other folders)
