[project]
name = "lootbox_agents"
version = "0.1.0"
description = "Servicio multiagente para loot boxes sociales en Celo/MiniPay."
authors = [{ name = "CeloBuilder", email = "ops@example.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "langchain>=0.2.10",
    "langgraph>=0.1.20",
    "langchain-google-genai>=0.0.12",
    "tavily-python>=0.3.6",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.3.0",
    "web3>=6.20.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.5.6"]

[project.scripts]
lootbox-agents = "src.main:run_cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

